[tool.poetry]
name = "rin-commands-api"
version = "0.1.0"
description = "A small API meant for fetching commands from Rin's Help Data DB"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
SQLAlchemy = "^1.4.40"
asyncpg = "^0.26.0"
orjson = "^3.8.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
gunicorn = "^20.1.0"
fastapi-cache2 = {extras = ["redis"], version = "^0.1.9"}

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
